Application-is-working
app working with red alert messages

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* ---------- root variables ---------- */
 :root {
-    --green: #145da0;
+    --green: #166e0e;
     --light-green: rgb(241, 239, 243);
     --light-grey: #f1f1f4;
     --text-color-light: #f1f1f1;
